# flask_almond_classifier

./: .gitignore  README.md  Untitled.ipynb  app.py  db_models.py  helper.py  images.db  index.html  models.py  pyproject.toml  read.m  report-example-1.docx  requirments.txt  train.py  website.py  ~$port-example-1.docx
saved_model/: keras_metadata.pb  saved_model.pb
saved_model/variables/: variables.index
static/: jumbotron-narrow.css  style.css
templates/: index.html
