[tool.poetry]
name = "newml"
version = "0.1.0"
description = ""
authors = ["Shihabaln <shihab.nasiri@rihal.om>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
tensorflow = "2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
